# llama.cpp

./: .clang-format  .gitignore  CMakeLists.txt
common/: CMakeLists.txt  arg.cpp  common.cpp  common.h  numpy.cpp  sampling.cpp  sampling.h  speculative.cpp
examples/: CMakeLists.txt
examples/batched/: batched.cpp
examples/beam/: CMakeLists.txt  beam.cpp  llama-beam.cpp  llama-beam.h
examples/gguf/: CMakeLists.txt  gguf-ctx.hpp  gguf-npy.cpp  gguf.cpp
examples/gritlm/: gritlm.cpp
examples/lookahead/: lookahead.cpp
examples/lookup/: lookup.cpp
examples/main/: main.cpp
examples/passkey/: passkey.cpp
examples/save-load-state/: save-load-state.cpp
examples/simple/: simple.cpp
examples/simple-chat/: simple-chat.cpp
examples/training/: finetune.cpp
ggml/include/: ggml-opt.h  ggml.h  write-numpy.h
ggml/src/: ggml-opt.cpp  ggml.c
ggml/src/ggml-cpu/: ggml-cpu.c  ops.cpp  ops.h
ggml/src/ggml-cuda/: ggml-cuda.cu  opt-step-adamw.cu  opt-step-sgd.cu
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
include/: llama.h
src/: llama-context.cpp  llama-context.h  llama-sampling.cpp  llama-vocab.cpp  llama.cpp
tests/: CMakeLists.txt  test-backend-ops.cpp  test-opt.cpp  test-sampling.cpp
tools/main/: main.cpp
tools/run/: run.cpp
tools/server/: server.cpp
